# das-framework

./: .dockerignore  .gitignore  CASE_STUDY.md  CHANGELOG.md  Dockerfile  PRODUCT_PLAN.md  README.md  SECURITY_REVIEW.md  STATUS.md  app.py  backbone_cifar_bench.py  cifar_bench.py  console.py  control_plane_demo.py  das_text.py  das_torch.py  demo.py  demo_torch.py  embedding_demo.py  governance_demo.py  langgraph_demo.py  leaf_shapes_bench.py  lifecycle_demo.py  mnist_stress.py  prefetch_demo.py  pyproject.toml  router_bench.py  serve.py  unsupervised_routing.py
.claude/: launch.json
apps/: app.py  console.py  flow_demo.py  governance_api.py  growth_worker.py  live_llm_demo.py  lora_growth_app.py  platform_console.py  supercharger_demo.py  vendor_console.py
benchmarks/: benchmark.py  cost_bench.py  germination_bench.py  governance_benchmark.py  hierarchy_bench.py  lora_bench.py  lora_latency_bench.py  lora_rank_bench.py  pnn_bench.py  scale_bench.py
csrc/: pager.cpp
das/: __init__.py  audit.py  audit_verify.py  freshness.py  functional.py  governance.py  hierarchy.py  hub.py  lifecycle.py  mobile_store.py  model.py  packnet.py  routing.py  text.py
deploy/: entrypoint.sh  k8s.yaml
docs/: CASE_STUDY.md  GROWING_CHILD.md  ORGANISM.md  PLATFORM_PLAN.md  PRODUCT_PLAN.md  RUNBOOK.md  SECURITY_REVIEW.md  SPECIALTY_FORESTS.md  STATUS.md  TEST_COVERAGE_MAP.md  THREAT_MODEL.md
examples/: audit_export_demo.py  backbone_demo.py  canopy_demo.py  checkpoint_demo.py  client.yaml  conv_demo.py  ed25519_audit_demo.py  encoder_demo.py  freshness_demo.py  hf_governance_demo.py  hierarchy_demo.py  hub_demo.py  lifecycle_demo.py  lora_growth_demo.py  lora_leaf_demo.py  mycelial_demo.py  pager_demo.py  paging_demo.py  platform_deploy_demo.py  text_demo.py
site/: index.html
templates/: console.html  continual_bench.html  index.html  real_bench.html  stress.html
tests/: test_api_hardening.py  test_audit_ed25519.py  test_audit_export.py  test_cost_bench.py  test_das.py  test_freshness.py  test_germination.py  test_governance.py  test_governance_api.py  test_governance_benchmark.py  test_growth.py  test_growth_api.py  test_hf_text.py  test_hierarchical_node.py  test_hierarchy.py  test_integrations.py  test_lora.py  test_lora_minilm.py  test_mobile_store.py  test_platform_connectors.py  test_platform_console.py  test_platform_deploy.py  test_platform_license.py  test_platform_spec.py  (+3 more)
(+41 files in other folders)
