[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "das-engine"
version = "0.1.0"
description = "DAS — a hard-routed Mixture-of-Experts with isolated, hot-swappable, auditable experts"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DDMX2022" }]
keywords = ["mixture-of-experts", "continual-learning", "moe", "routing"]
dependencies = ["numpy"]

[project.optional-dependencies]
torch = ["torch", "torchvision"]
web = ["flask"]
# Real frozen pretrained text encoder (MiniLM) for the Phase-1 "real backend"
# path — the console's real-text mode and examples/hf_governance_demo.py.
hf = ["torch", "sentence-transformers"]
# Asymmetric (Ed25519) audit signing — public-key-verifiable compliance docs (F7).
crypto = ["cryptography"]
all = ["torch", "torchvision", "flask", "sentence-transformers", "cryptography", "scikit-learn", "pandas"]

[project.scripts]
das-verify = "das.audit_verify:main"

[project.urls]
Homepage = "https://github.com/DDMX2022/das-framework"

[tool.setuptools]
# the NumPy core is the importable package; the PyTorch backend is a top-level module
packages = ["das"]
py-modules = ["das_torch", "das_text"]

[tool.pytest.ini_options]
# Tests import the package (das, das_torch) plus two relocated entry-point
# scripts directly: governance_api (apps/) and governance_benchmark (benchmarks/).
pythonpath = [".", "apps", "benchmarks"]
testpaths = ["tests"]
